--- a/scss/warp.scss
+++ b/scss/warp.scss
@@ -2,3 +2,10 @@
 @import './variables';
 @import './mixins';
 @import './x-padding';
+@import './gradient-text';
+@import './highlight-text';
+@import './primary-link';
+@import './bg';
+@import './primary-btn';
+@import './secondary-btn';
+@import './link-with-logo';
