chore: setup kss-node

--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,3 @@
-.scrollbar {
-  overflow-y: scroll;
-  scrollbar-width: thin;
-  scrollbar-color: black transparent;
-}
-.scrollbar::-webkit-scrollbar {
-  width: 6px;
-}
-.scrollbar::-webkit-scrollbar-button {
-  display: none;
-}
-.scrollbar::-webkit-scrollbar-thumb {
-  background: black;
-  border-radius: 3.125rem;
-}
-
-.x-padding {
-  padding: 0 1.25rem;
-}
-@media screen and (min-width: 720px) {
-  .x-padding {
-    padding: 0 3.125rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  .x-padding {
-    padding: 0 6.25rem;
-  }
-}
-@media screen and (min-width: 1140px) {
-  .x-padding {
-    padding: 0 12.5rem;
-  }
-}
-
 .gradient-text {
   background-image: -webkit-gradient(linear, left top, right bottom, from(#f9d423), to(#f83600));
   background-image: linear-gradient(to bottom right, #f9d423 0%, #f83600 100%);
@@ -46,8 +11,7 @@
   color: white;
 }
 
-.primary-link,
-.link-with-logo .link-text {
+.primary-link, .link-with-logo .link-text {
   text-decoration: none;
   color: #bfbfbf;
   font-weight: 500;
@@ -62,15 +26,44 @@
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-.primary-link:hover,
-.link-with-logo .link-text:hover {
+.primary-link:hover, .link-with-logo .link-text:hover {
   background-size: 100% 100%;
   color: #0b0d0e;
 }
 
-.bg {
-  background-image: -webkit-gradient(linear, left top, right bottom, color-stop(50%, #0b0d0e), to(#22282b));
-  background-image: linear-gradient(to bottom right, #0b0d0e 50%, #22282b 100%);
+.link-with-logo {
+  font-size: 1.25rem;
+  text-decoration: none;
+  width: 17.5rem;
+  margin: 1.25rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.link-with-logo .link-logo {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: 0.625rem;
+  pointer-events: none;
+}
+.link-with-logo .link-text {
+  height: 100%;
+  padding: 0.4em 0.3em;
+  background-size: 100% 1px;
+  background-position: left 0 bottom 0;
+}
+.link-with-logo .link-text:hover {
+  color: #bfbfbf;
+}
+.link-with-logo:hover .link-text {
+  background-size: 100% 100%;
+  color: #0b0d0e;
+}
+.link-with-logo:focus {
+  outline: none;
 }
 
 .primary-btn {
@@ -125,59 +118,44 @@
   background-image: linear-gradient(to bottom right, #f83600 0%, #f9d423 100%);
 }
 
-.primary-link,
-.link-with-logo .link-text {
-  text-decoration: none;
-  color: #bfbfbf;
-  font-weight: 500;
-  padding: 0.2em 0.3em;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#f9d423), to(#f83600));
-  background-image: linear-gradient(to bottom right, #f9d423 0%, #f83600 100%);
-  background-size: 100% 0.1em;
-  background-repeat: no-repeat;
-  background-position: left 0 bottom 5%;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+.scrollbar {
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: black transparent;
 }
-.primary-link:hover,
-.link-with-logo .link-text:hover {
-  background-size: 100% 100%;
-  color: #0b0d0e;
+.scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+.scrollbar::-webkit-scrollbar-button {
+  display: none;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 3.125rem;
 }
 
-.link-with-logo {
-  font-size: 1.25rem;
-  text-decoration: none;
-  width: 17.5rem;
-  margin: 1.25rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.x-padding {
+  padding: 0 1.25rem;
 }
-.link-with-logo .link-logo {
-  width: 2.5rem;
-  height: 2.5rem;
-  margin-right: 0.625rem;
-  pointer-events: none;
+@media screen and (min-width: 720px) {
+  .x-padding {
+    padding: 0 3.125rem;
+  }
 }
-.link-with-logo .link-text {
-  height: 100%;
-  padding: 0.4em 0.3em;
-  background-size: 100% 1px;
-  background-position: left 0 bottom 0;
+@media screen and (min-width: 992px) {
+  .x-padding {
+    padding: 0 6.25rem;
+  }
 }
-.link-with-logo .link-text:hover {
-  color: #bfbfbf;
+@media screen and (min-width: 1140px) {
+  .x-padding {
+    padding: 0 12.5rem;
+  }
 }
-.link-with-logo:hover .link-text {
-  background-size: 100% 100%;
-  color: #0b0d0e;
+
+.bg {
+  background-image: -webkit-gradient(linear, left top, right bottom, color-stop(50%, #0b0d0e), to(#22282b));
+  background-image: linear-gradient(to bottom right, #0b0d0e 50%, #22282b 100%);
 }
-.link-with-logo:focus {
-  outline: none;
-}
+
+/*# sourceMappingURL=main.css.map */
