--- a/scss/pages/_bg.scss
+++ b/scss/pages/_bg.scss
@@ -1,3 +1,13 @@
+// Background Image
+//
+// Displays a black & white linear gradient background image
+//
+// Markup
+// <section class="bg">
+//  Contents
+// </section>
+//
+// Styleguide Components.Background-Image
 .bg {
   background-image: -webkit-gradient(linear, left top, right bottom, color-stop(50%, #0b0d0e), to(#22282b));
   background-image: linear-gradient(to bottom right, #0b0d0e 50%, #22282b 100%);
