--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@
   font-weight: 500;
   text-decoration: none;
   color: #0b0d0e;
+  border: none;
   border-radius: 3px;
   background-image: -webkit-gradient(linear, left top, right bottom, from(#f9d423), to(#f83600));
   background-image: linear-gradient(to bottom right, #f9d423 0%, #f83600 100%);
