--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -1,4 +1,48 @@
-//Responsive Mixins
+// Media Query Mixins
+//
+// We've 3 mixins for media queries
+// 1. breakpointMin($minBreakpoint)
+// 2. breakpointMax($maxBreakpoint)
+// 3. breakpointMinMax($minBreakpoint, $maxBreakpoint)
+// List of breakpoints:
+// sm: 576px,
+// smD: 575.99px,
+// smU: 576.99px,
+// md: 720px,
+// mdD: 719.99px,
+// mdU: 720.99px,
+// lg: 992px,
+// lgD: 991.99px,
+// lgU: 992.99px,
+// xl: 1140px,
+// xlD: 1139.9px,
+// xlU: 1140.99px,
+// mobile-s: 320px,
+// mobile-sD: 319.99px,
+// mobile-sU: 320.99px,
+// mobile-m: 375px,
+// mobile-mD: 374.99px,
+// mobile-mU: 375.99px,
+// mobile-l: 425px,
+// mobile-lD: 424.99px,
+// mobile-lU: 425.99px,
+// tablet: 768px,
+// tabletD: 767.99px,
+// tabletU: 768.99px,
+// laptop: 1024px,
+// laptopD: 1023.99px,
+// laptopU: 1024.99px,
+// laptop-l: 1440px,
+// laptop-lD: 1439.99px,
+// laptop-lU: 1440.99px,
+// 4k: 2560px,
+// 4kd: 2559.99px,
+// 4ku: 2560.99px
+//
+// Markup:
+// @include breakpointMin(laptop)
+//
+// Style guide: Utils.Media Query Mixins
 $breakpoints: (
   sm: 576px,
   smD: 575.99px,
@@ -35,8 +79,8 @@ $breakpoints: (
   4ku: 2560.99px
 );
 
-@mixin breakpointMin($breakpoint) {
-  $value: map-get($breakpoints, $breakpoint);
+@mixin breakpointMin($minBreakpoint) {
+  $value: map-get($breakpoints, $minBreakpoint);
 
   @if $value !=null {
     @media screen and (min-width: $value) {
@@ -47,8 +91,8 @@ $breakpoints: (
   }
 }
 
-@mixin breakpointMax($breakpoint) {
-  $value: map-get($breakpoints, $breakpoint);
+@mixin breakpointMax($maxBreakpoint) {
+  $value: map-get($breakpoints, $maxBreakpoint);
 
   @if $value !=null {
     @media screen and (max-width: $value) {
@@ -63,24 +107,11 @@ $breakpoints: (
   $minValue: map-get($breakpoints, $minBreakpoint);
   $maxValue: map-get($breakpoints, $maxBreakpoint);
 
-  @if ($minValue !=null && $maxValue !=null) {
+  @if ($minValue !=null and $maxValue !=null) {
     @media screen and (min-width: $minValue) and (max-width: $maxValue) {
       @content;
     }
   } @else {
     @warn "Invalid breakpoint name.";
-  }
-}
-
-//Clearfix
-@mixin clearfix() {
-  &:before,
-  &:after {
-    content: '';
-    display: table;
-  }
-
-  &:after {
-    clear: both;
   }
 }
