--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,11 +1,11 @@
 // Gradient Text
 //
-// Styles texts with gradient color
+// Apply gradient colors to texts
 //
-// Markup
-// <h1 class="gradient-text">A gradient colored header</h1>
+// Markup: <h1 class="gradient-text">Gradient Text</h1>
 //
-// Styleguide Components.Gradient-Text
+// Style guide: Base.Gradient Text
+
 .gradient-text {
   background-image: -webkit-gradient(linear, left top, right bottom, from(#f9d423), to(#f83600));
   background-image: linear-gradient(to bottom right, #f9d423 0%, #f83600 100%);
@@ -16,16 +16,26 @@
 
 // Highlight Text
 //
-// Styles texts to stand out from other contents
+// Apply styles for highlighting any texts
 //
-// Markup
-// <h1 class="highlight-text">A gradient colored header</h1>
+// Markup: <h1 class="highlight-text">Highlight Text</h1>
 //
-// Styleguide Components.Highlight-Text
+// Style guide: Base.Highlight Text
+
 .highlight-text {
   font-weight: 500;
   color: white;
 }
+
+// Primary Link
+//
+// Apply styles to primary links
+// 
+// :hover - Styles while hovering
+//
+// Markup: <a href="#" class="primary-link">Gradient Text</a>
+//
+// Style guide: Base.Primary Link
 
 .primary-link {
   text-decoration: none;
@@ -47,6 +57,22 @@
     color: #0b0d0e;
   }
 }
+
+// Link with Logo
+//
+// Apply styles for links with logo
+//
+// :hover - Styles while hovering
+// 
+// Markup: 
+// <a href="#" class="link-with-logo">
+// <svg>
+// <path _ngcontent-kmt-c7="" clip-rule="evenodd" d="M3 3h94v94H3V3zM0 0h100v100H0V0zm24 73h11V37H24v36zm1-42l5 2 4-2c2-1 2-3 2-5 0-1 0-3-2-4l-4-2-5 2-1 4 1 5zm40 42h11V53l-2-12c-2-3-6-4-11-4l-7 1-3 4v-5H42v36h11V55l1-6c1-2 3-3 5-3 3 0 5 1 5 3l1 6v18z" fill="url(#paint0_linear)" fill-rule="evenodd"></path><defs _ngcontent-kmt-c7=""><linearGradient _ngcontent-kmt-c7="" gradientUnits="userSpaceOnUse" id="paint0_linear" x2="100" y2="100"><stop _ngcontent-kmt-c7="" stop-color="#fc431e"></stop><stop _ngcontent-kmt-c7="" offset="1" stop-color="#d81c4b"></stop></linearGradient></defs>
+// </svg>
+// <span>contact@snsakib.com</span>
+// </a>
+//
+// Style guide: Base.Link with logo
 
 .link-with-logo {
   font-size: 1.25rem;
