--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,4 +1,14 @@
-//Colors
+// Global Colors
+$background-color: #0b132b;
+$primary-color: #5688c7;
+$normal-text-color: #bfbfbf;
+$highlight-text-color: $primary-color;
+$link-underline-color: $primary-color;
+$gradient-stop-1: #f9d423;
+$gradient-stop-2: #f83600;
+
+
+// Brand Colors
 $mobile: #34a853;
 $email: #ea4335;
 $skype: #00aff0;
