--- a/scss/components/_primary-btn.scss
+++ b/scss/components/_primary-btn.scss
@@ -1,3 +1,5 @@
+@import '../utils/variables';
+
 // Primary Button
 //
 // Implement this style for your call-to-action button
@@ -23,23 +25,12 @@
   font-size: 1.3rem;
   font-weight: 500;
   text-decoration: none;
-  color: #0b0d0e;
+  color: $background-color;
   border: none;
   border-radius: 3px;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#f9d423), to(#f83600));
-  background-image: linear-gradient(to bottom right, #f9d423 0%, #f83600 100%);
+  background: $primary-color;
 
   &:hover {
-    background-image: -webkit-gradient(
-      linear,
-      left top, right bottom,
-      from(#f83600),
-      to(#f9d423)
-    );
-    background-image: linear-gradient(
-      to bottom right,
-      #f83600 0%,
-      #f9d423 100%
-    );
+    cursor: pointer;
   }
 }
