--- a/scss/components/_secondary-btn.scss
+++ b/scss/components/_secondary-btn.scss
@@ -1,3 +1,5 @@
+@import '../utils/variables';
+
 // Secondary Button
 //
 // Implement this style for your secondary buttons
@@ -18,30 +20,19 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  height: 1.875rem; // 30px
-  font-size: 1rem;
+  height: 2.5rem;
+  font-size: 1.3rem;
   text-decoration: none;
   border-radius: 3px;
   letter-spacing: 1px;
-  margin: 2rem auto 0;
-  border: 1px solid darkorange;
-  color: darkorange;
+  border: 1px solid $primary-color;
+  color: $primary-color;
   font-weight: 400;
 
   &:hover {
-    color: #bfbfbf;
+    color: $background-color;
     font-weight: 500;
     border: 1px solid transparent;
-    background-image: -webkit-gradient(
-      linear,
-      left top, right bottom,
-      from(#f83600),
-      to(#f9d423)
-    );
-    background-image: linear-gradient(
-      to bottom right,
-      #f83600 0%,
-      #f9d423 100%
-    );
+    background: $primary-color;
   }
 }
