feat: add gradient color

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -9,8 +9,8 @@
 // Style guide: Base.Gradient Text
 
 .gradient-text {
-  background-image: -webkit-gradient(linear, left top, right bottom, from($gradient-stop-1), to($gradient-stop-2));
-  background-image: linear-gradient(to bottom right, $gradient-stop-1 0%, $gradient-stop-2 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from($gradient-stop-1), color-stop(25%, $gradient-stop-2), to($gradient-stop-3));
+  background-image: linear-gradient(to right, $gradient-stop-1 0%, $gradient-stop-2 25%, $gradient-stop-3 100%);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -46,7 +46,8 @@
   padding: 0.2em 0.3em;
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
-  background: $link-underline-color;
+  background: -webkit-gradient(linear, left top, right top, from($gradient-stop-1), color-stop(25%, $gradient-stop-2), to($gradient-stop-3));
+  background: linear-gradient(to right, $gradient-stop-1 0%, $gradient-stop-2 25%, $gradient-stop-3 100%);
   background-size: 100% 0.1em;
   background-repeat: no-repeat;
   background-position: left 0 bottom 5%;
