--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .gradient-text {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#f9d423), to(#f83600));
-  background-image: linear-gradient(to bottom right, #f9d423 0%, #f83600 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from(#ff5722), color-stop(25%, #ff1f4a), to(#f700ad));
+  background-image: linear-gradient(to right, #ff5722 0%, #ff1f4a 25%, #f700ad 100%);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -18,7 +18,8 @@
   padding: 0.2em 0.3em;
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
-  background: #5688c7;
+  background: -webkit-gradient(linear, left top, right top, from(#ff5722), color-stop(25%, #ff1f4a), to(#f700ad));
+  background: linear-gradient(to right, #ff5722 0%, #ff1f4a 25%, #f700ad 100%);
   background-size: 100% 0.1em;
   background-repeat: no-repeat;
   background-position: left 0 bottom 5%;
